# airtask

./: .gitignore  pyproject.toml
airtask/: entities.py  exceptions.py  types.py
airtask/domain/: entities.py  exceptions.py  logics.py  models.py  task.py  types.py
airtask/infrastructure/airflow/: task_flow.py
tests/: test_domain.py
