[tool.poetry]
name = "airtask"
version = "0.1.0"
description = ""
authors = ["Wataru Hirota <wataru@whiro.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "^2.5.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
autoflake = "^2.0.1"
mypy = "^1.0.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
